# KSP-helper

./: .gitignore  CLAUDE.md  KSP_Planner_PlanningDoc.docx  Makefile  README.md  pyproject.toml
docs/: 00-architecture.md  01-phases.md  02-data-sources.md  03-schema.md  04-testing.md  PROGRESS.md
docs/features/: comm-network.md  dv-planner.md
docs/superpowers/plans/: 2026-04-21-dv-planner-7b.md  2026-04-22-dv-planner-7c.md  2026-04-23-dv-planner-7d.md  2026-04-23-dv-planner-7e.md  2026-04-24-phase-8a.md  2026-04-25-comms-web-8b.md
docs/superpowers/specs/: 2026-04-21-dv-planner-7b-design.md  2026-04-22-dv-planner-7c-design.md  2026-04-23-dv-planner-7d-design.md  2026-04-23-dv-planner-7e-design.md  2026-04-24-phase-8-web-ui-design.md  2026-04-25-comms-web-8b-design.md
seeds/: schema.sql  seed_stock.py
seeds/data/: README.md
src/ksp_planner/: cli.py  comms.py  db.py  dv_map.py  formatting.py  orbital.py  plans.py  scanning.py
src/ksp_planner/web/: __init__.py  app.py  deps.py  schemas.py  templates.py
src/ksp_planner/web/routes/: __init__.py  comms.py  dv.py  scanning.py
src/ksp_planner/web/static/css/: components.css  theme.css
src/ksp_planner/web/templates/: base.html
src/ksp_planner/web/templates/macros/: forms.html  panels.html
src/ksp_planner/web/templates/pages/: comms.html  dv.html  scanning.html
tests/: conftest.py  test_cli.py  test_comms.py  test_dv_map.py  test_orbital.py  test_plans.py  test_scanning.py  test_seed.py  test_smoke.py  test_web_comms.py  test_web_dv.py  test_web_scanning.py  test_web_schemas.py  test_web_smoke.py
(+5 files in other folders)
