[project]
name = "ksp-planner"
version = "0.0.1"
description = "Python + SQLite mission planner for Kerbal Space Program"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AJ" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
ksp = "ksp_planner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksp_planner"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis",
    "ruff",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "jinja2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "RUF001",  # ambiguous unicode chars in strings (we use μ, ×, ε, π intentionally)
    "RUF002",  # same, in docstrings
    "RUF003",  # same, in comments
    "SIM300",  # "Yoda conditions" — false positive on pytest.approx() idiom
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
